--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "Brad Traversy",
-  "license": "MIT",
+  "author": "Palak Gupta",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
